--- a/HTML.html
+++ b/HTML.html
@@ -1,5 +1,7 @@
 <html>
-  <header><title>Our Title</title></header>
+  <head>
+    <title>Our Title</title>
+  </head>
   <body>
     Hello world!
   </body>
