sample Pull Req

--- a/examples/HTML.html
+++ b/examples/HTML.html
@@ -1,8 +1,8 @@
 <html>
   <head>
-    <title>Our Title</title>
+    <title>Handsome Area</title>
   </head>
   <body>
-    Hello world!
+    Hello, Welcome to Handsome Area!
   </body>
 </html>
