--- a/examples/HTML_8.html
+++ b/examples/HTML_8.html
@@ -4,6 +4,7 @@
   </head>
   <body>
     <font color="red">
+      <h1>Hello world !</h1>
     <marquee><b><i>Hello World !</i></b></marquee>
   </font>
   </body>
